# mpc_rosmeta

./: .gitignore  CRRCsim_help  README.md  c_in_ros.txt
cgmres/: CMakeLists.txt  package.xml  readme.md
cgmres/include/cgmres/: cgmres_model.hpp
cgmres/src/: cgmres_model.cpp
cgmres_mayataka/: README.md
cmscgmres_autogen/: AutoGenU.mc  AutoGenU.nb  Format2.m  Format3.m  Readme.txt  agex.c  agsad.c  compile.sh  inputEX.m  inputODQ.m  inputSAD.m  onedeequad.c  plotsim.m  rhfuncu.c  rhmainu.c
cmscgmres_autogen/agex/: agex00c.m  agex00e.m  agex00u.m  agex00x.m
mayataka_cgmres/: CMakeLists.txt
mayataka_ros/: CMakeLists.txt
mayataka_ros/include/: mayataka_nmpc.hpp  multiple_shooting_cgmres.hpp  simulator.hpp
mayataka_ros/src/: mayataka_nmpc.cpp  nmpc_model.cpp
mpc_meta/: CMakeLists.txt  package.xml
optimaztion/: arnoldi.py  gmres_w_arnoldi.m
osqp_ros/: CMakeLists.txt  package.xml  readme.md
osqp_ros/launch/: osqp.launch
osqp_ros/models/: oneDquad.yaml
osqp_ros/src/: osqp_node.py
scripts/: build_mpc.bash
